[package]
name = "wasm-dtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
csv="*"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = { version = "1.0", features = ["derive"] }